fix: remove unused imports, fix deprecated URL constructor